.apex/unpackaged/objects/redwing__Achievement_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement</label>
        <referenceTo>redwing__Achievement__c</referenceTo>
        <relationshipLabel>Achievement Assignments</relationshipLabel>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Achievement Assignments</relationshipLabel>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Acquired</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Training_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Activity</label>
        <referenceTo>redwing__Training_Activity__c</referenceTo>
        <relationshipLabel>Achievement Assignments</relationshipLabel>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan_Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan Achievement</label>
        <referenceTo>redwing__Training_Plan_Achievement__c</referenceTo>
        <relationshipLabel>Achievement Assignments</relationshipLabel>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Achievement Assignments</relationshipLabel>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Achievement_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Achievement Assignment</label>
    <nameField>
        <displayFormat>AAS-{0000000}</displayFormat>
        <label>Achievement Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievement Assignments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>